Tests/test_output/Atlases/test_get_mask.txt
WARNING: package sun.awt.X11 not in java.desktop
WARNING: package sun.awt.X11 not in java.desktop

ERROR: Undefined function 'findstrings' for input arguments of type 'cell'.

Error in get_mask (line 90)
    [indices, areas] = findstrings(lower(names), lower(region_name));
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in test_get_mask (line 7)
mask = get_mask('HOsc', 'amygdala');
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in run (line 112)
evalin('caller', strcat(scriptStem, ';'));
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

STATUS: FAIL
